Fix Volunteer Screen UI (#7296)
* fix: overlapping ui in volunteer page

* fix: improve ui consistency

* fix: ui changes

--- a/src/shared-components/SearchFilterBar/SearchFilterBar.module.css
+++ b/src/shared-components/SearchFilterBar/SearchFilterBar.module.css
@@ -8,6 +8,7 @@
   align-items: stretch;
   gap: var(--space-1);
   flex-wrap: wrap;
+  min-height: var(--space-10);
 }
 
 .btnsBlockSearchBar {
